syntax = "proto3";

option go_package = "github.com/riicarus/grpclearn/rpc/route;route";

package route;

message Cpu {
    string brand = 1;
    string name = 2;
    string number_cores = 3;
    string number_threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}

message CpuOfBrandRequest {
    string brand = 1;
}

message CpuOfNameRequest {
    string name = 1;
}

message CpuNumberResponse {
    int32 number = 1;
}

service CpuService {
    // unary
    rpc SearchCPU (CpuOfNameRequest) returns (Cpu);
    // server side stream
    rpc ListCPUOfOneBrand (CpuOfBrandRequest) returns (stream Cpu);
    // user side stream
    rpc CountNumber (stream CpuOfBrandRequest) returns (CpuNumberResponse);
    // bi-directional stream
    rpc ListCPUOfNames (stream CpuOfNameRequest) returns (stream Cpu);
}